// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bar 1`] = `
<div>
  <div
    style="width: 90%; margin: auto;"
  >
    <svg
      class="barChart"
      height="370.05"
      style="background-color: white;"
      width="500"
    >
      <g
        transform="translate(125, 0.05)"
      >
        <g
          class="x-axis"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          style="transform: translateY(349.95px);"
          text-anchor="middle"
        >
          <g
            class="tick"
            opacity="1"
            transform="translate(0.5,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-349.95"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              0
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(56.951612903225815,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-349.95"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              0,1
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(113.40322580645163,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-349.95"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              0,2
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(169.8548387096774,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-349.95"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              0,3
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(226.30645161290326,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-349.95"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              0,4
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(282.7580645161291,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-349.95"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              0,5
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(339.2096774193548,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-349.95"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              0,6
            </text>
          </g>
        </g>
        <g
          class="y-axis"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          text-anchor="end"
        >
          <g
            class="tick"
            opacity="1"
            transform="translate(0,36.105952380952374)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              Sykehus 5
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,91.65357142857141)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              Sykehus 2
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,147.20119047619045)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              Nasjonalt
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,202.7488095238095)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              Sykehus 4
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,258.2964285714286)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              Sykehus 1
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,313.8440476190476)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              Sykehus 3
            </text>
          </g>
        </g>
        <g
          class="levels"
        >
          <rect
            class="level"
            data-testid="level-high"
            fill="#3baa34"
            height="349.95"
            opacity="0.2"
            width="112.90322580645163"
            x="0"
            y="0"
          />
          <rect
            class="level"
            data-testid="level-mid"
            fill="#fd9c00"
            height="349.95"
            opacity="0.2"
            width="56.45161290322578"
            x="112.90322580645163"
            y="0"
          />
          <rect
            class="level"
            data-testid="level-low"
            fill="#e30713"
            height="349.95"
            opacity="0.2"
            width="180.6451612903226"
            x="169.3548387096774"
            y="0"
          />
        </g>
        <g
          class="bars"
        >
          <rect
            class="bar"
            data-testid="bar-Sykehus 5"
            fill="#7EBEC7"
            height="38.883333333333326"
            opacity="1"
            width="286.8306451612903"
            x="0"
            y="16.66428571428571"
          />
          <rect
            class="bar"
            data-testid="bar-Sykehus 5"
            fill="#7EBEC7"
            height="38.883333333333326"
            opacity="1"
            width="286.8306451612903"
            x="0"
            y="16.66428571428571"
          />
          <rect
            class="bar"
            data-testid="bar-Sykehus 2"
            fill="#7EBEC7"
            height="38.883333333333326"
            opacity="1"
            width="230.3790322580645"
            x="0"
            y="72.21190476190475"
          />
          <rect
            class="bar"
            data-testid="bar-Sykehus 2"
            fill="#7EBEC7"
            height="38.883333333333326"
            opacity="1"
            width="230.3790322580645"
            x="0"
            y="72.21190476190475"
          />
          <rect
            class="bar"
            data-testid="bar-Nasjonalt"
            fill="#00263D"
            height="38.883333333333326"
            opacity="1"
            width="190.86290322580643"
            x="0"
            y="127.7595238095238"
          />
          <rect
            class="bar"
            data-testid="bar-Nasjonalt"
            fill="#00263D"
            height="38.883333333333326"
            opacity="1"
            width="190.86290322580643"
            x="0"
            y="127.7595238095238"
          />
          <rect
            class="bar"
            data-testid="bar-Sykehus 4"
            fill="#7EBEC7"
            height="38.883333333333326"
            opacity="1"
            width="173.9274193548387"
            x="0"
            y="183.30714285714285"
          />
          <rect
            class="bar"
            data-testid="bar-Sykehus 4"
            fill="#7EBEC7"
            height="38.883333333333326"
            opacity="1"
            width="173.9274193548387"
            x="0"
            y="183.30714285714285"
          />
          <rect
            class="bar"
            data-testid="bar-Sykehus 1"
            fill="#7EBEC7"
            height="38.883333333333326"
            opacity="1"
            width="117.4758064516129"
            x="0"
            y="238.8547619047619"
          />
          <rect
            class="bar"
            data-testid="bar-Sykehus 1"
            fill="#7EBEC7"
            height="38.883333333333326"
            opacity="1"
            width="117.4758064516129"
            x="0"
            y="238.8547619047619"
          />
          <rect
            class="bar"
            data-testid="bar-Sykehus 3"
            fill="#7EBEC7"
            height="38.883333333333326"
            opacity="1"
            width="61.024193548387096"
            x="0"
            y="294.40238095238095"
          />
          <rect
            class="bar"
            data-testid="bar-Sykehus 3"
            fill="#7EBEC7"
            height="38.883333333333326"
            opacity="1"
            width="61.024193548387096"
            x="0"
            y="294.40238095238095"
          />
        </g>
        <g
          class="labels"
        >
          <text
            class="label"
            data-testid="bar-label-Sykehus 5"
            fill="rgb(0, 0, 0)"
            font-size="0.7em"
            opacity="0.9"
            text-anchor="middle"
            x="302.8306451612903"
            y="39.105952380952374"
          >
            1
          </text>
          <text
            class="label"
            data-testid="bar-label-Sykehus 5"
            fill="rgb(0, 0, 0)"
            font-size="0.7em"
            opacity="0.9"
            text-anchor="middle"
            x="302.8306451612903"
            y="39.105952380952374"
          >
            1
          </text>
          <text
            class="label"
            data-testid="bar-label-Sykehus 2"
            fill="rgb(0, 0, 0)"
            font-size="0.7em"
            opacity="0.9"
            text-anchor="middle"
            x="246.3790322580645"
            y="94.65357142857141"
          >
            0
          </text>
          <text
            class="label"
            data-testid="bar-label-Sykehus 2"
            fill="rgb(0, 0, 0)"
            font-size="0.7em"
            opacity="0.9"
            text-anchor="middle"
            x="246.3790322580645"
            y="94.65357142857141"
          >
            0
          </text>
          <text
            class="label"
            data-testid="bar-label-Nasjonalt"
            fill="rgb(0, 0, 0)"
            font-size="0.7em"
            opacity="0.9"
            text-anchor="middle"
            x="206.86290322580643"
            y="150.20119047619045"
          >
            0
          </text>
          <text
            class="label"
            data-testid="bar-label-Nasjonalt"
            fill="rgb(0, 0, 0)"
            font-size="0.7em"
            opacity="0.9"
            text-anchor="middle"
            x="206.86290322580643"
            y="150.20119047619045"
          >
            0
          </text>
          <text
            class="label"
            data-testid="bar-label-Sykehus 4"
            fill="rgb(0, 0, 0)"
            font-size="0.7em"
            opacity="0.9"
            text-anchor="middle"
            x="189.9274193548387"
            y="205.7488095238095"
          >
            0
          </text>
          <text
            class="label"
            data-testid="bar-label-Sykehus 4"
            fill="rgb(0, 0, 0)"
            font-size="0.7em"
            opacity="0.9"
            text-anchor="middle"
            x="189.9274193548387"
            y="205.7488095238095"
          >
            0
          </text>
          <text
            class="label"
            data-testid="bar-label-Sykehus 1"
            fill="rgb(0, 0, 0)"
            font-size="0.7em"
            opacity="0.9"
            text-anchor="middle"
            x="133.4758064516129"
            y="261.2964285714286"
          >
            0
          </text>
          <text
            class="label"
            data-testid="bar-label-Sykehus 1"
            fill="rgb(0, 0, 0)"
            font-size="0.7em"
            opacity="0.9"
            text-anchor="middle"
            x="133.4758064516129"
            y="261.2964285714286"
          >
            0
          </text>
          <text
            class="label"
            data-testid="bar-label-Sykehus 3"
            fill="rgb(0, 0, 0)"
            font-size="0.7em"
            opacity="0.9"
            text-anchor="middle"
            x="77.0241935483871"
            y="316.8440476190476"
          >
            0
          </text>
          <text
            class="label"
            data-testid="bar-label-Sykehus 3"
            fill="rgb(0, 0, 0)"
            font-size="0.7em"
            opacity="0.9"
            text-anchor="middle"
            x="77.0241935483871"
            y="316.8440476190476"
          >
            0
          </text>
        </g>
      </g>
    </svg>
  </div>
</div>
`;

exports[`Bar select treatment unit 1`] = `
<div>
  <div
    style="width: 90%; margin: auto;"
  >
    <svg
      class="barChart"
      height="340.05"
      style="background-color: white;"
      width="500"
    >
      <g
        transform="translate(125, 0.05)"
      >
        <g
          class="x-axis"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          style="transform: translateY(319.95px);"
          text-anchor="middle"
        >
          <g
            class="tick"
            opacity="1"
            transform="translate(0.5,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-319.95"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              0 %
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(70.5,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-319.95"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              20 %
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(140.5,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-319.95"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              40 %
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(210.5,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-319.95"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              60 %
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(280.5,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-319.95"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              80 %
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(350.5,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-319.95"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              100 %
            </text>
          </g>
        </g>
        <g
          class="y-axis"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          text-anchor="end"
        >
          <g
            class="tick"
            opacity="1"
            transform="translate(0,33.010714285714265)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              Sykehus 5
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,83.79642857142855)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              Sykehus 2
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,134.58214285714283)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              Nasjonalt
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,185.36785714285713)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              Sykehus 4
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,236.1535714285714)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              Sykehus 1
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,286.9392857142857)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              Sykehus 3
            </text>
          </g>
        </g>
        <g
          class="levels"
        />
        <g
          class="bars"
        >
          <rect
            class="bar"
            data-testid="bar-Sykehus 5"
            fill="#7EBEC7"
            height="35.55"
            opacity="1"
            width="177.835"
            x="0"
            y="15.235714285714266"
          />
          <rect
            class="bar"
            data-testid="bar-Sykehus 5"
            fill="#7EBEC7"
            height="35.55"
            opacity="1"
            width="177.835"
            x="0"
            y="15.235714285714266"
          />
          <rect
            class="bar"
            data-testid="bar-Sykehus 2"
            fill="#7EBEC7"
            height="35.55"
            opacity="1"
            width="142.835"
            x="0"
            y="66.02142857142854"
          />
          <rect
            class="bar"
            data-testid="bar-Sykehus 2"
            fill="#7EBEC7"
            height="35.55"
            opacity="1"
            width="142.835"
            x="0"
            y="66.02142857142854"
          />
          <rect
            class="bar"
            data-testid="bar-Nasjonalt"
            fill="#00263D"
            height="35.55"
            opacity="1"
            width="118.33500000000001"
            x="0"
            y="116.80714285714284"
          />
          <rect
            class="bar"
            data-testid="bar-Nasjonalt"
            fill="#00263D"
            height="35.55"
            opacity="1"
            width="118.33500000000001"
            x="0"
            y="116.80714285714284"
          />
          <rect
            class="bar"
            data-testid="bar-Sykehus 4"
            fill="#7EBEC7"
            height="35.55"
            opacity="1"
            width="107.835"
            x="0"
            y="167.59285714285713"
          />
          <rect
            class="bar"
            data-testid="bar-Sykehus 4"
            fill="#7EBEC7"
            height="35.55"
            opacity="1"
            width="107.835"
            x="0"
            y="167.59285714285713"
          />
          <rect
            class="bar"
            data-testid="bar-Sykehus 1"
            fill="#7EBEC7"
            height="35.55"
            opacity="1"
            width="72.83500000000001"
            x="0"
            y="218.3785714285714"
          />
          <rect
            class="bar"
            data-testid="bar-Sykehus 3"
            fill="#7EBEC7"
            height="35.55"
            opacity="1"
            width="37.835"
            x="0"
            y="269.1642857142857"
          />
          <rect
            class="bar"
            data-testid="bar-Sykehus 3"
            fill="#7EBEC7"
            height="35.55"
            opacity="1"
            width="37.835"
            x="0"
            y="269.1642857142857"
          />
        </g>
        <g
          class="labels"
        >
          <text
            class="label"
            data-testid="bar-label-Sykehus 5"
            fill="rgb(0, 0, 0)"
            font-size="0.7em"
            opacity="0.9"
            text-anchor="middle"
            x="193.835"
            y="36.010714285714265"
          >
            1
          </text>
          <text
            class="label"
            data-testid="bar-label-Sykehus 5"
            fill="rgb(0, 0, 0)"
            font-size="0.7em"
            opacity="0.9"
            text-anchor="middle"
            x="193.835"
            y="36.010714285714265"
          >
            1
          </text>
          <text
            class="label"
            data-testid="bar-label-Sykehus 2"
            fill="rgb(0, 0, 0)"
            font-size="0.7em"
            opacity="0.9"
            text-anchor="middle"
            x="158.835"
            y="86.79642857142855"
          >
            0
          </text>
          <text
            class="label"
            data-testid="bar-label-Sykehus 2"
            fill="rgb(0, 0, 0)"
            font-size="0.7em"
            opacity="0.9"
            text-anchor="middle"
            x="158.835"
            y="86.79642857142855"
          >
            0
          </text>
          <text
            class="label"
            data-testid="bar-label-Nasjonalt"
            fill="rgb(0, 0, 0)"
            font-size="0.7em"
            opacity="0.9"
            text-anchor="middle"
            x="134.335"
            y="137.58214285714283"
          >
            0
          </text>
          <text
            class="label"
            data-testid="bar-label-Nasjonalt"
            fill="rgb(0, 0, 0)"
            font-size="0.7em"
            opacity="0.9"
            text-anchor="middle"
            x="134.335"
            y="137.58214285714283"
          >
            0
          </text>
          <text
            class="label"
            data-testid="bar-label-Sykehus 4"
            fill="rgb(0, 0, 0)"
            font-size="0.7em"
            opacity="0.9"
            text-anchor="middle"
            x="123.835"
            y="188.36785714285713"
          >
            0
          </text>
          <text
            class="label"
            data-testid="bar-label-Sykehus 4"
            fill="rgb(0, 0, 0)"
            font-size="0.7em"
            opacity="0.9"
            text-anchor="middle"
            x="123.835"
            y="188.36785714285713"
          >
            0
          </text>
          <text
            class="label"
            data-testid="bar-label-Sykehus 1"
            fill="rgb(0, 0, 0)"
            font-size="0.7em"
            opacity="0.9"
            text-anchor="middle"
            x="88.83500000000001"
            y="239.1535714285714"
          >
            0
          </text>
          <text
            class="label"
            data-testid="bar-label-Sykehus 3"
            fill="rgb(0, 0, 0)"
            font-size="0.7em"
            opacity="0.9"
            text-anchor="middle"
            x="53.835"
            y="289.9392857142857"
          >
            0
          </text>
          <text
            class="label"
            data-testid="bar-label-Sykehus 3"
            fill="rgb(0, 0, 0)"
            font-size="0.7em"
            opacity="0.9"
            text-anchor="middle"
            x="53.835"
            y="289.9392857142857"
          >
            0
          </text>
        </g>
      </g>
    </svg>
  </div>
</div>
`;

exports[`Line 1`] = `
<div>
  <div>
    <div
      style="width: 90%; margin: auto; position: relative;"
    >
      <svg
        class="lineChart"
        height="322"
        style="background-color: white;"
        width="500"
      >
        <g
          transform="translate(25, 8)"
        >
          <g
            class="legendItem Nasjonalt"
            opacity="1"
            transform="translate(0,0)"
          >
            <text
              dy="0.35em"
              fill="#2D3034"
              font-size="0.9rem"
              text-anchor="start"
              x="0"
              y="0"
            >
               
              Nasjonalt
            </text>
            <line
              stroke="#4F9A94"
              stroke-linecap="round"
              stroke-width="4"
              x1="0"
              y1="15"
              y2="15"
            />
          </g>
        </g>
        <g
          transform="translate(25, 38)"
        >
          <g
            class="x-axis"
            fill="none"
            font-family="sans-serif"
            font-size="10"
            text-anchor="middle"
            transform="translate(0, 208)"
          >
            <g
              class="tick"
              opacity="1"
              transform="translate(405.5,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2019
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(270.5,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2018
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(135.5,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2017
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0.5,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2016
              </text>
            </g>
          </g>
          <g
            class="y-axis"
            fill="none"
            font-family="sans-serif"
            font-size="10"
            text-anchor="start"
          >
            <text
              fill="#2D3034"
              style="font-size: 15.1px;"
              transform="rotate(-90)"
              x="-138.66666666666666"
              y="465.74999999999994"
            >
              Antall
            </text>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,170.29591836734693)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,1
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,127.84693877551021)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,2
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,85.39795918367346)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,3
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,42.94897959183673)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,4
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,0.5)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,5
              </text>
            </g>
          </g>
          <g
            class="levels"
          >
            <rect
              class="level"
              data-testid="level-high"
              fill="#3baa34"
              height="80.65306122448979"
              opacity="0.2"
              width="405"
              x="0"
              y="127.34693877551021"
            />
            <rect
              class="level"
              data-testid="level-mid"
              fill="#fd9c00"
              height="42.448979591836746"
              opacity="0.2"
              width="405"
              x="0"
              y="84.89795918367346"
            />
            <rect
              class="level"
              data-testid="level-low"
              fill="#e30713"
              height="84.89795918367346"
              opacity="0.2"
              width="405"
              x="0"
              y="0"
            />
          </g>
          <g
            class="linesComplete"
          >
            <path
              class="line"
              d="M270,123.909L135,39.011L0,177.861"
              fill="none"
              opacity="1"
              stroke="#4F9A94"
              style="stroke-width: 3; stroke-linejoin: round; stroke-linecap: round; mix-blend-mode: multiply;"
            />
          </g>
          <g
            class="linesIncomplete"
          >
            <path
              class="line"
              d="M405,166.358L270,123.909"
              fill="none"
              opacity="1"
              stroke="#4F9A94"
              style="stroke-width: 3; stroke-dasharray: 10, 10; stroke-linejoin: round; stroke-linecap: round; mix-blend-mode: multiply;"
            />
          </g>
          <g
            class="dots"
          >
            <circle
              class="dot"
              cx="405"
              cy="166.35755102040815"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="270"
              cy="123.9085714285714"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="135"
              cy="39.01061224489794"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="0"
              cy="177.86122448979592"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;
